--- a/src/Components/PlayListItem/PlayListItem.scss
+++ b/src/Components/PlayListItem/PlayListItem.scss
@@ -2,20 +2,29 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   &_artwork {
+    // background-color: #ccc;
     width: 35px;
     height: 35px;
     border-radius: 2px;
   }
   &_data-wrapper {
     margin-left: 15px;
-    
   }
   &_name {
-
   }
   &_artist {
     font-weight: 500;
-    font-size: .9rem;
+    font-size: 0.9rem;
+  }
+}
+
+.list-group-item {
+  &:hover {
+    z-index: 1;
+    color: #495057;
+    text-decoration: none;
+    background-color: #f8f9fa;
   }
 }
