Move all components to easy-peasy

--- a/src/Components/PlayListItem/PlayListItem.scss
+++ b/src/Components/PlayListItem/PlayListItem.scss
@@ -22,7 +22,7 @@
 
 .list-group-item {
   &:hover {
-    z-index: 1;
+    // z-index: 1;
     color: #495057;
     text-decoration: none;
     background-color: #f8f9fa;
