--- a/client/src/Components/ProcessingPanel/ProcessingPanel.scss
+++ b/client/src/Components/ProcessingPanel/ProcessingPanel.scss
@@ -9,9 +9,10 @@ $space-l: 20px;
   width: 500px;
   margin: 0 auto;
   background: #fff;
-  box-shadow: 0 0.7px 2.2px rgba(0, 0, 0, 0.02), 0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-    0 3.3px 10px rgba(0, 0, 0, 0.035), 0 5.8px 17.9px rgba(0, 0, 0, 0.042),
-    0 10.9px 33.4px rgba(0, 0, 0, 0.05), 0 26px 80px rgba(0, 0, 0, 0.07);
+  // box-shadow: 0 0.7px 2.2px rgba(0, 0, 0, 0.02), 0 1.7px 5.3px rgba(0, 0, 0, 0.028),
+  //   0 3.3px 10px rgba(0, 0, 0, 0.035), 0 5.8px 17.9px rgba(0, 0, 0, 0.042),
+  //   0 10.9px 33.4px rgba(0, 0, 0, 0.05), 0 26px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 5px 5px 0 rgba(154,160,185,.05),0 5px 30px 0 rgba(166,173,201,.22);
   border-radius: $space-xs;
   &_content {
     display: flex;
