--- a/client/src/Components/Desk/Desk.scss
+++ b/client/src/Components/Desk/Desk.scss
@@ -1,8 +1,32 @@
 .desk {
+  height: 100%;
+  width: 600px;
   display: flex;
+  margin: auto;
+  flex-direction: column;
+  &_header {
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    img {
+      border-radius: 2px;
+      box-shadow: 0 0.7px 2.2px rgba(0, 0, 0, 0.02), 0 1.7px 5.3px rgba(0, 0, 0, 0.028),
+        0 3.3px 10px rgba(0, 0, 0, 0.035), 0 5.8px 17.9px rgba(0, 0, 0, 0.042),
+        0 10.9px 33.4px rgba(0, 0, 0, 0.05), 0 15px 80px rgba(0, 0, 0, 0.07);
+    }
+    &_pl-name {
+      font-size: 25px;
+      margin-left: 10px;
+    }
+  }
+  &_list {
+    margin-bottom: 120px;
+  }
 }
-
 .list-group-item {
   border-left: none;
   border-right: none;
+  &:first-child {
+    border-radius: 0;
+  }
 }
