--- a/client/src/Components/ProcessingPanel/ProcessingPanel.scss
+++ b/client/src/Components/ProcessingPanel/ProcessingPanel.scss
@@ -2,22 +2,25 @@ $space-xs: 8px;
 $space-l: 20px;
 
 .processing-panel {
-  position: sticky;
-  // display: inline;
+  position: fixed;
   bottom: $space-l;
-  margin: 0 $space-l;
-  width: 500px;
-  margin: 0 auto;
-  background: #fff;
-  // box-shadow: 0 0.7px 2.2px rgba(0, 0, 0, 0.02), 0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-  //   0 3.3px 10px rgba(0, 0, 0, 0.035), 0 5.8px 17.9px rgba(0, 0, 0, 0.042),
-  //   0 10.9px 33.4px rgba(0, 0, 0, 0.05), 0 26px 80px rgba(0, 0, 0, 0.07);
-  box-shadow: 0 5px 5px 0 rgba(154,160,185,.05),0 5px 30px 0 rgba(166,173,201,.22);
-  border-radius: $space-xs;
+  width: 100%;
   &_content {
     display: flex;
     align-items: center;
     padding: $space-l;
+    width: fit-content;
+    background: #fff;
+    margin: auto;
+    box-shadow: 0 5px 5px 0 rgba(154, 160, 185, 0.05), 0 5px 30px 0 rgba(166, 173, 201, 0.22);
+    border-radius: $space-xs;
+    border: 1px solid rgba(108, 117, 125, 0.2);
+    &_label {
+      font-size: 12px;
+      color: var(--gray);
+    }
+    &_quantity {
+    }
   }
   &_margin-button {
     margin-left: 20px;
