--- a/client/src/Components/Desk/Desk.scss
+++ b/client/src/Components/Desk/Desk.scss
@@ -5,7 +5,13 @@
   margin: auto;
   flex-direction: column;
   &_header {
-    margin: 20px 0;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 1;
+    background: white;
+    // margin: 20px 0;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     img {
